--- a/frontend/src/assets/scss/theme/_calendar.scss
+++ b/frontend/src/assets/scss/theme/_calendar.scss
@@ -25,21 +25,21 @@
   background-color: $primary-color  !important;
 }
 // draggable calender
-#external-events {
-  background-color: $transparent-color !important;
-  overflow-y: auto !important;
-  padding: 10px !important;
-  width: 90%;
-}
-.fc-event, .fc-event-dot {
-  background-color: $primary-color  !important;
-  padding: 7px !important;
-  color: $white !important;
-}
-.fc-button-primary {
-  background-color: $primary-color  !important;
-  border-color: $primary-color  !important;
-}
+// #external-events {
+//   background-color: $transparent-color !important;
+//   overflow-y: auto !important;
+//   padding: 10px !important;
+//   width: 90%;
+// }
+// .fc-event, .fc-event-dot {
+//   background-color: $primary-color  !important;
+//   padding: 7px !important;
+//   color: $white !important;
+// }
+// .fc-button-primary {
+//   background-color: $primary-color  !important;
+//   border-color: $primary-color  !important;
+// }
 /**=====================
     66. FullCalendar CSS End
 ==========================**/
