* Patient CRUD: cont.; * Patient Quick Add modifications; * Appointment Management modifications

--- a/frontend/src/assets/scss/theme/_loader.scss
+++ b/frontend/src/assets/scss/theme/_loader.scss
@@ -7,7 +7,7 @@
   display: block;
   align-items: center;
   justify-content: center;
-  position: fixed;
+  position: absolute;
   background-color: $white;
   z-index: 1001;
   top: 0;
