--- a/frontend/src/assets/scss/bootstrap/_modal.scss
+++ b/frontend/src/assets/scss/bootstrap/_modal.scss
@@ -163,6 +163,10 @@
 
 }
 
-@include media-breakpoint-up(lg) {
+@include media-breakpoint-up(xl) {
   .modal-lg { max-width: $modal-lg; }
+}
+
+@include media-breakpoint-up(lg) {
+  .modal-xl { max-width: $modal-xl; }
 }
