--- a/frontend/src/assets/scss/bootstrap/_variables.scss
+++ b/frontend/src/assets/scss/bootstrap/_variables.scss
@@ -787,7 +787,8 @@ $modal-header-border-width:         $modal-content-border-width !default;
 $modal-footer-border-width:         $modal-header-border-width !default;
 $modal-header-padding:              1rem !default;
 
-$modal-lg:                          800px !default;
+$modal-xl:                          90% !default;
+$modal-lg:                          900px !default;
 $modal-md:                          500px !default;
 $modal-sm:                          300px !default;
 
