* Whatsapp notification first attempt; * Fixes

--- a/backend/views/newAppointment.handlebars
+++ b/backend/views/newAppointment.handlebars
@@ -17,7 +17,7 @@
     <h2>Hola {{ patientFirstName }}! </h2>
     <p>Te infromamos que se ha dado de alta un nuevo turno para el d&iacute;a {{ appointmentStart }} hs</p>
     <h3>Detalles: </h3>
-	<b><u>D&iacute;a y hora:</u> </b></span> viernes, 20 de mayo de 2022, 12:40 hs
+	<b><u>D&iacute;a y hora:</u> </b></span> {{ appointmentStart }} hs
 	<br/>
 	<br/>
 	<b><u>Consultorio:</u> </b></span> {{ doctorRoom }}
