--- a/frontend/src/assets/scss/slick-theme.scss
+++ b/frontend/src/assets/scss/slick-theme.scss
@@ -10,11 +10,11 @@
 $slick-font-path: "../fonts/" !default;
 $slick-font-family: "slick" !default;
 $slick-loader-path: "../" !default;
-$slick-arrow-color: white !default;
+$slick-arrow-color: $cyan !default;
 $slick-dot-color: black !default;
 $slick-dot-color-active: $slick-dot-color !default;
-$slick-prev-character: "\2190" !default;
-$slick-next-character: "\2192" !default;
+$slick-prev-character: "\276e" !default;
+$slick-next-character: "\276f" !default;
 $slick-dot-character: "\2022" !default;
 $slick-dot-size: 6px !default;
 $slick-opacity-default: 0.75 !default;
@@ -62,9 +62,9 @@ $slick-opacity-not-active: 0.25 !default;
     line-height: 0px;
     font-size: 0px;
     cursor: pointer;
-    background: transparent;
     color: transparent;
-    top: 50%;
+    background: transparent;
+    top: 59%;
     -webkit-transform: translate(0, -50%);
     -ms-transform: translate(0, -50%);
     transform: translate(0, -50%);
@@ -84,10 +84,11 @@ $slick-opacity-not-active: 0.25 !default;
     }
     &:before {
         font-family: $slick-font-family;
-        font-size: 20px;
-        line-height: 1;
+        font-size: 25px;
+        font-weight: 800;
+        // line-height: 1;
         color: $slick-arrow-color;
-        opacity: $slick-opacity-default;
+        // opacity: $slick-opacity-default;
         -webkit-font-smoothing: antialiased;
         -moz-osx-font-smoothing: grayscale;
     }
