New Feature: add Hospital Rooms management (inital commit)

--- a/frontend/src/assets/scss/theme/_react-plugin.scss
+++ b/frontend/src/assets/scss/theme/_react-plugin.scss
@@ -455,6 +455,7 @@ ol {
     }
     .react-kanban-column {
         background-color: rgba($primary-color, 0.05);
+        width: 20%;
         > div {
             > div {
                 > div {
