--- a/frontend/src/assets/scss/theme/_kanban.scss
+++ b/frontend/src/assets/scss/theme/_kanban.scss
@@ -64,6 +64,13 @@
     margin-right: 7px;
     i{
       margin-right: 5px;
+      color: rgb(188, 198, 222);
+      font-size: 16px;
+      transition: all 0.3s ease;
+      &:hover{
+        color: $primary-color ;
+        transition: all 0.3s ease;
+      }
     }
   }    
 }
