Revert "Temporary Feature: Pink October layout"
This reverts commit d40d0fe8e002f05dc88295bbd757311d76aaf673.

--- a/frontend/src/assets/scss/color-3.scss
+++ b/frontend/src/assets/scss/color-3.scss
@@ -90,8 +90,8 @@
 	 89. rating
  */
  @import "theme/variables";
- $primary-color: #f9a9f6;
- $secondary-color: #b764b4;
+ $primary-color: #8e24aa;
+ $secondary-color: #ff6e40;
  $gradient-primary: linear-gradient($secondary-color, $primary-color);
  $all-focus-outline-color: $primary-color;
  $code-tag-color: $primary-color;
